--- a/debian/control
+++ b/debian/control
@@ -119,6 +119,7 @@ Package: ceph-mds
 Architecture: linux-any
 Depends: ceph-base (= ${binary:Version}),
          ${misc:Depends},
+         ${python:Depends},
          ${shlibs:Depends}
 Recommends: ceph-fuse (= ${binary:Version}),
             libcephfs1 (= ${binary:Version})
@@ -148,6 +149,7 @@ Package: ceph-mgr
 Architecture: linux-any
 Depends: ceph-base (= ${binary:Version}),
          ${misc:Depends},
+         ${python:Depends},
          ${shlibs:Depends}
 Replaces: ceph (<< 0.93-417)
 Breaks: ceph (<< 0.93-417)
@@ -176,6 +178,7 @@ Architecture: linux-any
 Depends: ceph-base (= ${binary:Version}),
          python-flask,
          ${misc:Depends},
+         ${python:Depends},
          ${shlibs:Depends}
 Recommends: ceph-common
 Replaces: ceph (<< 10)
@@ -606,6 +609,7 @@ Depends: ceph-common (= ${binary:Version}),
          mime-support,
          librgw2 (= ${binary:Version}),
          ${misc:Depends},
+         ${python:Depends},
          ${shlibs:Depends}
 Recommends: ntp | time-daemon
 Description: REST gateway for RADOS distributed object store
