--- a/debian/rules
+++ b/debian/rules
@@ -157,7 +157,8 @@ override_dh_python3:
 	for binding in rados cephfs rbd; do                                \
 	  dh_python3 -p python3-$$binding; \
 	done
-	dh_python3 -p python3-ceph-argparse
+	dh_python3 -p python3-ceph-argparse \
+        dh_python3 -p ceph-mgr
 
 # do not run tests
 override_dh_auto_test:
